cabal-version: 2.2
name:
  jsdsl
version:
  0.1
synopsis:
  Safe Javascript EDSL
-- description
homepage:
  https://github.com/goolord/jsedsl
bug-reports:
  https://github.com/goolord/jsedsl/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  goolord
  chessai
  Andrew Martin
maintainer:
  goolord <zacharyachurchill@gmail.com>
  chessai <chessai1996@gmail.com>
  Andrew Martin <andrew.thaddeus@gmail.com>
copyright:
  copyright 2019 goolord
  copyright 2019 chessai
  copyright 2019 Andrew Martin
category:
  Language
build-type:
  Simple
extra-source-files:
  README.md
  CHANGELOG.md

library
  exposed-modules:
    Javascript
    Key
  other-modules:
    Prelude
  build-depends:
    , base >= 4.10.1 && < 4.13
    , free >= 5 && < 6
    , integer-gmp >= 1 && < 1.1
    , semirings >= 0.3 && < 0.4
    , text >= 1.2 && < 1.3
  mixins:
    base hiding (Prelude)
  hs-source-dirs:
    src
  default-language:
    Haskell2010
